[package]
name = "velodyne_driver"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
yaml-peg = { version = "1.0.8", default-features = false }
zerocopy = { version = "0.7.34", features = ["derive"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

[dev-dependencies]
csv = "1.3.0"
hdf5 = "0.8.1"
ndarray = "0.15.6"
